--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  go_router: ^13.0.1
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
